# warehouse_project

attach_service/: CMakeLists.txt  package.xml
attach_service/src/: approach_service_server.cpp  attach_service_server.cpp
attach_service/srv/: GoToLoading.srv
cartographer_slam/: CMakeLists.txt
cartographer_slam/config/: warehouse_map_real.pgm  warehouse_map_sim.pgm  warehouse_map_sim.yaml
cartographer_slam/launch/: cartographer.launch.py
cartographer_slam/rviz/: mapping.rviz
localization_server/: CMakeLists.txt  package.xml
localization_server/config/: amcl_config_real.yaml  amcl_config_sim.yaml
localization_server/launch/: localization.launch.py
localization_server/rviz/: localization_config.rviz
map_server/: CMakeLists.txt  package.xml
map_server/config/: warehouse_map_keepout_real.pgm  warehouse_map_keepout_real.yaml  warehouse_map_keepout_sim.pgm  warehouse_map_keepout_sim.yaml  warehouse_map_real.yaml  warehouse_map_sim.pgm  warehouse_map_sim.yaml
map_server/launch/: map_server.launch.py
map_server/rviz/: map_display.rviz
nav2_apps/scripts/: move_shelf_to_ship.py  move_shelf_to_ship_real.py
path_planner_server/: CMakeLists.txt  package.xml
path_planner_server/config/: bt_navigator_sim.yaml  controller_real.yaml  controller_sim.yaml  filters_real.yaml  filters_sim.yaml  navigate_w_replanning_and_recovery.xml  planner_real.yaml  planner_sim.yaml  recoveries_real.yaml  recoveries_sim.yaml
path_planner_server/launch/: pathplanner.launch.py  pathplanner_real.launch.py
path_planner_server/rviz/: pathplanning.rviz
